--- a/views/characters/anakin_skywalker.html
+++ b/views/characters/anakin_skywalker.html
@@ -30,7 +30,7 @@
                                 <td><a>Un Nouvel espoir</a></td>
                             <tr>
                                 <th>Affiliations :</th>
-                                <td><a href="">Ordre Jedi</a>/République galactique, puis Sith/apire galactique</td>
+                                <td><a href="../corporations/jedi.html">Ordre Jedi</a>/<a href="../corporations/republique_galactique.html">République galactique</a>, puis <a href="../corporations/siths.html">Sith</a>/<a href="../corporations/empire_galactique.html">Empire galactique</a></td>
                             </tr>
                             <tr>
                                 <th>Race :</th>
@@ -42,11 +42,11 @@
                             </tr>
                             <tr>
                                 <th>Planète d'origine :</th>
-                                <td>Tatooine</td>
+                                <td><a href="../planets/tatooine.html">Tatooine</a></td>
                             </tr>
                             <tr>
                                 <th>Métier :</th>
-                                <td>Chevalier de l'Ordre puis Seigneur Sith</td> 
+                                <td>Chevalier de <a href="../corporations/jedi.html">l'Ordre</a> puis Seigneur <a href="../corporations/siths.html">Sith</a>/td> 
                             </tr>
                             <tr>
                                 <th>Côté de la force :</th>
@@ -59,9 +59,9 @@
                     <hr>
                     <h2>Rôle dans l'histoire</h2>
                     <img src="" alt="">
-                    <p>Dans La Menace Fantôme, Anakin est un enfant de petite taille aux cheveux courts et blonds (coupe au bol) et aux yeux bleus, pilote de module de courses. Il est esclave sur Tatooine. À la fin du film, il porte la coupe de cheveux (avec la tresse signifiant qu’il est apprenti) et les vêtements des Padawan. </p>
-                    <p>Dans L'Attaque des clones, il est devenu adulte et a donc considérablement grandi. Il mesure dans les 1,80 m et arbore toujours la coupe de cheveux des Padawans. Lors du duel final contre le comte Dooku, il se fait trancher l'avant-bras droit et est contraint de porter une prothèse mécanique.</p>
-                    <p>Dans La Revanche des Sith, il a considérablement laissé pousser ses cheveux et une cicatrice est présente sur sa tempe droite. Durant le massacre du Conseil Séparatiste, ses yeux sont jaunes et injectés de sang, ce qui montre une forte emprise du Côté Obscur. Lorsqu'il perd son duel contre son ancien maître Obi wan Kenobi, à la fin de l'épisode III, il perd en même temps le dernier bras qui lui reste, ainsi que ses deux jambes. La colère et la rage déforment son visage avant que son corps ne soit presque entièrement brûlé par de la lave en fusion. Son corps sera désormais couvert de cicatrices et de traces de brûlures et pour survivre, Anakin sera enfermé dans une sombre armure de survie qu'il occupera jusqu'à la fin de sa vie.</p>
+                    <p>Dans <a href="../movies/movie1.html">La Menace Fantôme</a> , Anakin est un enfant de petite taille aux cheveux courts et blonds (coupe au bol) et aux yeux bleus, pilote de module de courses. Il est esclave sur <a href="../planets/tatooine.html">Tatooine</a>. À la fin du film, il porte la coupe de cheveux (avec la tresse signifiant qu’il est apprenti) et les vêtements des Padawan. </p>
+                    <p>Dans <a href="../movies/movie2.html">L'Attaque des clones</a>, il est devenu adulte et a donc considérablement grandi. Il mesure dans les 1,80 m et arbore toujours la coupe de cheveux des Padawans. Lors du duel final contre le <a href="../characters/compte_dooku.html">comte Dooku</a>, il se fait trancher l'avant-bras droit et est contraint de porter une prothèse mécanique.</p>
+                    <p>Dans <a href="../movies/movie3.html">La Revanche des Sith</a>, il a considérablement laissé pousser ses cheveux et une cicatrice est présente sur sa tempe droite. Durant le massacre du Conseil Séparatiste, ses yeux sont jaunes et injectés de sang, ce qui montre une forte emprise du Côté Obscur. Lorsqu'il perd son duel contre son ancien maître Obi wan Kenobi, à la fin de l'épisode III, il perd en même temps le dernier bras qui lui reste, ainsi que ses deux jambes. La colère et la rage déforment son visage avant que son corps ne soit presque entièrement brûlé par de la lave en fusion. Son corps sera désormais couvert de cicatrices et de traces de brûlures et pour survivre, Anakin sera enfermé dans une sombre armure de survie qu'il occupera jusqu'à la fin de sa vie.</p>
                 </div>
 			</div>
 		</main>
