--- a/views/characters/index_perso.html
+++ b/views/characters/index_perso.html
@@ -9,6 +9,9 @@
 </head>
 
 <body class="">
+    <header>
+        <iframe src="../../views/header.html" frameborder="0"></iframe>
+    </header>
 
     <div class="containertrio">
         <h1>les personnages de la trilogie</h1>
@@ -16,11 +19,11 @@
         <div class="item1">
 
             <h2>personnages récurent de la trilogie</h2>
-            
+
             <div class="anakin"><a href="#"><img
                         src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp"
                         alt=""></a></div>
-            <div class="palpatine"><a href="#"><img
+                        <div class="palpatine"><a href="#"><img
                         src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp"
                         alt=""></a>
             </div>
@@ -150,7 +153,8 @@
                         src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
                 </a></div>
 
-            <div class="yoda"><a href="#"><img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
+            <div class="yoda"><a href="#"><img
+                        src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
                 </a></div>
 
             <div class="grievous"><a href="#"><img
@@ -175,6 +179,9 @@
 
 
     </div>
+    <footer>
+        <iframe src="../../views/footer.html" frameborder="0"></iframe>
+    </footer>
 
 </body>
 
