--- a/views/characters/zam_wesell.html
+++ b/views/characters/zam_wesell.html
@@ -1,73 +1,111 @@
 <!DOCTYPE html>
 <html lang="fr">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="../../css/styles.css">
-		<title>Zam Wesell</title>
-	</head>
-	<body>
-		<header>
-			<iframe src="../../views/header.html" frameborder="0"></iframe>
-		</header>
-		<main>
-			<div class="container">
-				<div class="presentation">
-					<div class="histoire">
-                        <h1>Zam Wesell</h1>
-                        <p>Zam Wesell était une tueuse à gages, associée de Jango Fett. Elle trouva la mort après une course-poursuite en airspeeder avec deux Jedi, Obi-Wan Kenobi et Anakin Skywalker, et qui se termina dans les profondeurs de Coruscant, alors qu'elle s'apprêtait à révéler le nom de celui qui voulait assassiner la sénatrice Amidala. Sa mort fut causée par Jango Fett lui-même qui lui tira une fléchette empoisonnée dans le cou.</p>
-                    </div>
-                    <div class="presentoir">
-                        <img src="" alt="">
-                        <table>
-                            <tr>
-                                <th>Apparaît dans : </th>
-                                <td><a> L'Attaque des clones</a></td>
-                            </tr>
-                            <th>Première apparition :</th>
-                            <td><a> L'Attaque des clones</a></td>
-                            <tr>
-                                <th>Affiliations :</th>
-                                <td>Jango Fett</td>
-                    
-                            </tr>
-                            <tr>
-                                <th>Race :</th>
-                                <td>Clawdite</td>
-                            </tr>
-                            <tr>
-                                <th>Genre :</th>
-                                <td>Féminin</td>
-                            </tr>
-                            <tr>
-                                <th>Planète d'origine :</th>
-                                <td>Zolan</td>
-                            </tr>
-                            <tr>
-                                <th>Métier :</th>
-                                <td>Chasseuse de prime</td>
-                    
-                            </tr>
-                            <tr>
-                                <th>Côté de la force :</th>
-                                <td>Côté obscur</td>
-                            </tr>
-                        </table>
-                    </div>
-				</div>
-                <div class="relations">
-					<hr>
-                    <h2>Rôle dans l'histoire</h2>
-                    <img src="" alt="">
-                    <p>Malgré l'aversion que portait la population de Zolan au métier de chasseur de primes, Zam Wesell décida très tôt que ce serait la voie qu'elle emprunterait. La jeune Clawdite quitta alors sa planète et se rendit sur Denon, un monde relativement similaire à Coruscant. Là, Zam assimila une variante d'un art martial provenant des Mabari, un peuple antique de Zolan. Ainsi formée, elle s'estima prête pour entrer dans le monde des chasseurs de primes.</p>
-                    <p>  Mais elle ne pouvait pas se lancer dans une galaxie hostile sans se former un minimum sur le terrain. Aussi, Zam débuta en tant que garde du corps ou agent de sécurité. De cette manière Zam put avoir une première approche de la réalité. Puis finalement, la Clawdite arrêta la protection de biens et de personnes pour se consacrer à l'espionnage industriel, une occupation beaucoup plus risquée que ce qu'elle avait connu.</p>
-                    <p>  Puis un jour, elle stoppa ces activités et s'engagea définitivement sur la voie des chasseurs de primes. Néanmoins, malgré l'expérience acquise au fil des années, Zam débuta bien évidemment au bas de l'échelle. Pourtant, la ténacité de la jeune femme finit par payer : peu avant la Guerre des Clones, on la considérait comme l'une des meilleures guerrières de sa génération.</p>
-                </div>
-			</div>
-		</main>
-		<footer>
-			<iframe src="../../views/footer.html" frameborder="0"></iframe>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/styles.css" />
+    <title>Zam Wesell</title>
+  </head>
+  <body>
+    <header>
+      <iframe src="../../views/header.html" frameborder="0"></iframe>
+    </header>
+    <main>
+      <div class="container">
+        <div class="presentation">
+          <div class="histoire">
+            <h1>Zam Wesell</h1>
+            <p>
+              Zam Wesell était une tueuse à gages, associée de
+              <a href="../characters/jango_fett.html">Jango Fett</a>. Elle
+              trouva la mort après une course-poursuite en airspeeder avec deux
+              <a href="../corporations/jedi.html">Jedi</a>,
+              <a href="../characters/obi-wan_kenobi.html">Obi-Wan Kenobi</a> et
+              <a href="../characters/anakin_skywalker.html">Anakin Skywalker</a
+              >, et qui se termina dans les profondeurs de Coruscant, alors
+              qu'elle s'apprêtait à révéler le nom de celui qui voulait
+              assassiner la sénatrice
+              <a href="../characters/padme_amidala.html">Amidala</a>. Sa mort
+              fut causée par
+              <a href="../characters/jango_fett.html">Jango Fett</a> lui-même
+              qui lui tira une fléchette empoisonnée dans le cou.
+            </p>
+          </div>
+          <div class="presentoir">
+            <img src="" alt="" />
+            <table>
+              <tr>
+                <th>Apparaît dans :</th>
+                <td>
+                  <a href="../movies/movie1.html"> L'Attaque des clones</a>
+                </td>
+              </tr>
+              <th>Première apparition :</th>
+              <td><a href="../movies/movie1.html"> L'Attaque des clones</a></td>
+              <tr>
+                <th>Affiliations :</th>
+                <td><a href="../characters/jango_fett.html">Jango Fett</a></td>
+              </tr>
+              <tr>
+                <th>Race :</th>
+                <td>Clawdite</td>
+              </tr>
+              <tr>
+                <th>Genre :</th>
+                <td>Féminin</td>
+              </tr>
+              <tr>
+                <th>Planète d'origine :</th>
+                <td>Zolan</td>
+              </tr>
+              <tr>
+                <th>Métier :</th>
+                <td>Chasseuse de prime</td>
+              </tr>
+              <tr>
+                <th>Côté de la force :</th>
+                <td>Côté obscur</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="relations">
+          <hr />
+          <h2>Rôle dans l'histoire</h2>
+          <img src="" alt="" />
+          <p>
+            Malgré l'aversion que portait la population de Zolan au métier de
+            chasseur de primes, Zam Wesell décida très tôt que ce serait la voie
+            qu'elle emprunterait. La jeune Clawdite quitta alors sa planète et
+            se rendit sur Denon, un monde relativement similaire à
+            <a href="../planets/coruscant.html">Coruscant</a>. Là, Zam assimila
+            une variante d'un art martial provenant des Mabari, un peuple
+            antique de Zolan. Ainsi formée, elle s'estima prête pour entrer dans
+            le monde des chasseurs de primes.
+          </p>
+          <p>
+            Mais elle ne pouvait pas se lancer dans une galaxie hostile sans se
+            former un minimum sur le terrain. Aussi, Zam débuta en tant que
+            garde du corps ou agent de sécurité. De cette manière Zam put avoir
+            une première approche de la réalité. Puis finalement, la Clawdite
+            arrêta la protection de biens et de personnes pour se consacrer à
+            l'espionnage industriel, une occupation beaucoup plus risquée que ce
+            qu'elle avait connu.
+          </p>
+          <p>
+            Puis un jour, elle stoppa ces activités et s'engagea définitivement
+            sur la voie des chasseurs de primes. Néanmoins, malgré l'expérience
+            acquise au fil des années, Zam débuta bien évidemment au bas de
+            l'échelle. Pourtant, la ténacité de la jeune femme finit par payer :
+            peu avant la Guerre des Clones, on la considérait comme l'une des
+            meilleures guerrières de sa génération.
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <iframe src="../../views/footer.html" frameborder="0"></iframe>
+    </footer>
+  </body>
 </html>
