--- a/views/characters/index.html
+++ b/views/characters/index.html
@@ -1,227 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../../css/styles.css" />
+		<link rel="stylesheet" href="../../css/corpocss.css" />
+		<title>Index personnages</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../css/styles.css" />
-    <link rel="stylesheet" href="../../css/corpocss.css" />
-    <title>Index personnages</title>
-</head>
+	<body class="personnages">
+		<header>
+			<iframe src="../../views/header.html" frameborder="0"></iframe>
+		</header>
 
-<body class="personnages">
-    <header>
-        <iframe src="../../views/header.html" frameborder="0"></iframe>
-    </header>
+		<main>
+			<div class="container">
+				<h1>Les personnages de la trilogie</h1>
+				<h2>Personnages récurrent de la trilogie</h2>
+				<div class="list">
+					<div class="anakin card">
+						<a href="anakin_skywalker.html">
+							<img src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp" />
+							<p>Anakin</p>
+						</a>
+					</div>
 
-<main>
-    <div class="container">
-        
-    </div>
-</main>
-    <h1>Les personnages de la trilogie</h1>
-<h2>Personnages récurrent de la trilogie</h2>
-    <div class="list">
+					<div class="palpatine card">
+						<a href="palpatine.html">
+							<img src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp" alt="" />
+							<p>Palpatine</p>
+						</a>
+					</div>
+					<div class="amidala card">
+						<a href="padme_amidala.html">
+							<img src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp" alt="" />
+							<p>Amidala</p>
+						</a>
+					</div>
+					<div class="obiwan card">
+						<a href="obi-wan_kenobi.html">
+							<img src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" alt="" />
+							<p>Obi-wan Kenobi</p>
+						</a>
+					</div>
+					<div class="mace card">
+						<a href="mace_windu.html">
+							<img src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" alt="" width="50px" />
+							<p>>Mace Windu</p>
+						</a>
+					</div>
+				</div>
 
-        
+				<h2>Les protagonistes apparu dans La Menace Fantôme</h2>
+				<div class="list">
+					<div class="valorum card">
+						<a href="finis_valorum.html">
+							<img src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt="" />
+							<p>Valorum</p>
+						</a>
+					</div>
 
-        <div class="anakin card">
-            <a href="anakin_skywalker.html">
-                <img 
-                    src="../../images/characters/image_centpx/anna_skywalker_resultatredimensionner.webp" 
-                />
-                <p>Anakin</p>
-            </a>
-        </div>
+					<div class="gunray card">
+						<a href="nute_gunray.html">
+							<img src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp" alt="" />
+							<p>Nute Gunray</p>
+						</a>
+					</div>
 
-        <div class="palpatine card"><a href="palpatine.html"><img
-                    src="../../images/characters/image_centpx/empereur_palpatine_resultatredimensionner.webp" alt="">
-                <p>Palpatine</p>
-            </a>
-        </div>
-        <div class="amidala card"><a href="padme_amidala.html"><img
-                    src="../../images/characters/image_centpx/padme_admidala_resultatredimensionner.webp" alt="">
-                <p>Amidala</p>
-            </a></div>
-        <div class="obiwan card"><a href="obi-wan_kenobi.html"><img
-                    src="../../images/characters/image_centpx/hobi_wan_resultatredimensionner.jpg" alt="">
-                <p>Obi-wan Kenobi</p>
-            </a></div>
-        <div class="mace card"><a href="mace_windu.html"><img
-                    src="../../images/characters/image_centpx/mace_windu_resultatredimensionner.jpg" alt=""
-                    width="50px"><p>>Mace Windu</p</a></div>
-    </div>
+					<div class="qui card">
+						<a href="qui_gon_jinn.html">
+							<img src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp" alt="" />
+							<p>Qui Gon Jinn</p>
+						</a>
+					</div>
 
+					<div class="boss card">
+						<a href="boss_nass.html">
+							<img src="../../images/characters/image_centpx/rugor_nass_resultatredimensionner.webp" alt="" />
+							<p>Boss Nass</p>
+						</a>
+					</div>
 
-  <h2>Les protagonistes apparu dans La Menace Fantôme</h2>
-    <div class="list">
-      
+					<div class="jar card">
+						<a href="jar_jar_bink.html">
+							<img src="../../images/characters/image_centpx/jarjar-bink_resultatredimensionner.jpg" alt="" />
+							<p>Jar Jar Binks</p>
+						</a>
+					</div>
 
+					<div class="ki card">
+						<a href="ki_adi_mundi.html">
+							<img src="../../images/characters/image_centpx/ki_di_mundi_resultatredimensionner.webp" alt="" />
+							<p>Ki Adi Mundi</p>
+						</a>
+					</div>
 
-        <div class="valorum card"><a href="finis_valorum.html"><img
-                    src="../../images/characters/image_centpx/finis_valorum_resultatredimensionner.jpg" alt="">
-                <p>Valorum</p>
-            </a></div>
+					<div class="yoda card">
+						<a href="yoda.html">
+							<img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="" />
+							<p>Yoda</p>
+						</a>
+					</div>
 
-        <div class="gunray card"><a href="nute_gunray.html"><img
-                    src="../../images/characters/image_centpx/nute_gunray_resultatredimensionner.webp" alt="">
-                <p>Nute Gunray</p>
-            </a></div>
+					<div class="dark card">
+						<a href="dark_maul.html">
+							<img src="../../images/characters/image_centpx/dark_maul_resultatredimensionner.webp" alt="" />
+							<p>Dark Maul</p>
+						</a>
+					</div>
 
-        <div class="qui card"><a href="qui_gon_jinn.html"><img
-                    src="../../images/characters/image_centpx/qui-gon_jinn_resultatredimensionner.webp" alt="">
-                <p>Qui Gon Jinn</p>
-            </a></div>
+					<div class="shmi card">
+						<a href="shmi_skywalker.html">
+							<img src="../../images/characters/image_centpx/shmi_skywalker_resultatredimensionner.webp" alt="" />
+							<p>Shmi Skywalker</p>
+						</a>
+					</div>
 
-        <div class="boss card"><a href="boss_nass.html"><img
-                    src="../../images/characters/image_centpx/rugor_nass_resultatredimensionner.webp" alt="">
-                <p>Boss Nass</p>
-            </a></div>
+					<div class="watto card">
+						<a href="watto.html">
+							<img src="../../images/characters/image_centpx/watto_resultatredimensionner.webp" alt="" />
+							<p>Watto</p>
+						</a>
+					</div>
 
-        <div class="jar card"><a href="jar_jar_bink.html"><img
-                    src="../../images/characters/image_centpx/jarjar-bink_resultatredimensionner.jpg" alt="">
-                <p>Jar Jar Binks</p>
-            </a></div>
+					<div class="sio card">
+						<a href="#">
+							<img src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" alt="" />
+							<p>Sio Bibble</p>
+						</a>
+					</div>
 
-        <div class="ki card"><a href="ki_adi_mundi.html"><img
-                    src="../../images/characters/image_centpx/ki_di_mundi_resultatredimensionner.webp" alt="">
-                <p>Ki Adi Mundi</p>
-            </a></div>
+					<div class="c3po card">
+						<a href="c-3po.html">
+							<img src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="" />
+							<p>C-3po</p>
+						</a>
+					</div>
 
-        <div class="yoda  card"><a href="yoda.html"><img
-                    src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
-                <p>Yoda</p>
-            </a></div>
+					<div class="r2d2 card" card>
+						<a href="r2-d2.html">
+							<img src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="" />
+							<p>R2-D2</p>
+						</a>
+					</div>
 
-        <div class="dark card"><a href="dark_maul.html"><img
-                    src="../../images/characters/image_centpx/dark_maul_resultatredimensionner.webp" alt="">
-                <p>Dark Maul</p>
-            </a></div>
+					<div class="panaka card">
+						<a href="panaka.html">
+							<img src="../../images/characters/image_centpx/captain_tanaka_resultatredimensionner.jpg" alt="" />
+							<p>Captain Panaka</p>
+						</a>
+					</div>
+				</div>
 
-        <div class="shmi card"><a href="shmi_skywalker.html"><img
-                    src="../../images/characters/image_centpx/shmi_skywalker_resultatredimensionner.webp" alt="">
-                <p>Shmi Skywalker</p>
-            </a></div>
+				<h2>Les protagonistes apparus dans L'Attaque des Clones</h2>
+				<div class="list">
+					<div class="compte card">
+						<a href="compte_dooku.html">
+							<img src="../../images/characters/image_centpx/compte_dooku_resultatredimensionner.webp" alt="" />
+							<p>Comte Dooku</p>
+						</a>
+					</div>
 
-        <div class="watto card"><a href="watto.html"><img
-                    src="../../images/characters/image_centpx/watto_resultatredimensionner.webp" alt="">
-                <p>Watto</p>
-            </a></div>
+					<div class="zam card">
+						<a href="zam_wesell.html">
+							<img src="../../images/characters/image_centpx/zam_wesell_resultatredimensionner.jpg" alt="" />
+							<p>Zam Wesell</p>
+						</a>
+					</div>
 
-        <div class="sio card"><a href="#"><img
-                    src="../../images/characters/image_centpx/sio_bibble_resultatredimensionner.jpg" alt="">
-                <p>Sio Bibble</p>
-            </a></div>
+					<div class="poggle card">
+						<a href="poggle_le_bref.html">
+							<img src="../../images/characters/image_centpx/poggle_bataille_resultatredimensionner.jpg" alt="" />
+							<p>Poggle le Bref</p>
+						</a>
+					</div>
 
-        <div class="c3po card"><a href="c-3po.html"><img
-                    src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
-                <p>C-3po</p>
-            </a></div>
+					<div class="boba card">
+						<a href="boba_fett.html">
+							<img src="../../images/characters/image_centpx/boba_fett_resultatredimensionner.webp" alt="" />
+							<p>Boba Fett</p>
+						</a>
+					</div>
 
-        <div class="r2d2 card" card><a href="r2-d2.html"><img
-                    src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                <p>R2-D2</p>
-            </a></div>
+					<div class="jango card">
+						<a href="jango_fett.html">
+							<img src="../../images/characters/image_centpx/jango._fett_resultatredimensionner.webp" alt="" />
+							<p>Jango Fett</p>
+						</a>
+					</div>
 
-        <div class="panaka card"><a href="panaka.html"><img
-                    src="../../images/characters/image_centpx/captain_tanaka_resultatredimensionner.jpg" alt="">
-                <p>Captain Panaka</p>
-            </a></div>
+					<div class="taun card">
+						<a href="taun_we.html">
+							<img src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" alt="" />
+							<p>Taun Me</p>
+						</a>
+					</div>
 
-    </div>
+					<div class="dexter card">
+						<a href="dexter">
+							<img src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="" />
+							<p>Dexter Jettster</p>
+						</a>
+					</div>
 
+					<div class="typho card" card>
+						<a href="typho">
+							<img src="../../images/characters/image_centpx/gregar_typho_resultatredimensionner.webp" alt="" />
+							<p>Gregar Typho</p>
+						</a>
+					</div>
+				</div>
 
- <h2>Les protagonistes apparus dans L'Attaque des Clones </h2>
-    <div class="list">
-       
+				<h2>Les protagonistes apparus dans La Revanches des Siths</h2>
+				<div class="list">
+					<div class="c3po card">
+						<a href="c-3po.html">
+							<img src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="" />
+							<p>C-3po</p>
+						</a>
+					</div>
 
-        <div class="compte card"><a href="compte_dooku.html"><img
-                    src="../../images/characters/image_centpx/compte_dooku_resultatredimensionner.webp" alt="">
-                <p>Comte Dooku</p>
-            </a></div>
+					<div class="r2d2 card">
+						<a href="r2-d2.html">
+							<img src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="" />
+							<p>R2-D2</p>
+						</a>
+					</div>
 
-        <div class="zam card"><a href="zam_wesell.html"><img
-                    src="../../images/characters/image_centpx/zam_wesell_resultatredimensionner.jpg" alt="">
-                <p>Zam Wesell</p>
-            </a></div>
+					<div class="yoda card">
+						<a href="yoda.html">
+							<img src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="" />
+							<p>Yoda</p>
+						</a>
+					</div>
 
-        <div class="poggle  card"><a href="poggle_le_bref.html"><img
-                    src="../../images/characters/image_centpx/poggle_bataille_resultatredimensionner.jpg" alt="">
-                <p>Poggle le Bref</p>
-            </a></div>
+					<div class="grievous card">
+						<a href="general_grievous.html">
+							<img src="../../images/characters/image_centpx/Grievoushead_resultatredimensionner.webp" alt="" />
+							<p>Général Grievous</p>
+						</a>
+					</div>
 
-        <div class="boba card"><a href="boba_fett.html"><img
-                    src="../../images/characters/image_centpx/boba_fett_resultatredimensionner.webp" alt="">
-                <p>Boba Fett</p>
-            </a></div>
+					<div class="chewbacca card">
+						<a href="chewbacca.html">
+							<img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="" />
+							<p>Chewbacca</p>
+						</a>
+					</div>
 
-        <div class="jango card"><a href="jango_fett.html"><img
-                    src="../../images/characters/image_centpx/jango._fett_resultatredimensionner.webp" alt="">
-                <p>Jango Fett</p>
-            </a></div>
+					<div class="tarfull card">
+						<a href="tarrful.html">
+							<img src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="" />
+							<p>Tarrful</p>
+						</a>
+					</div>
 
-        <div class="taun card"><a href="taun_we.html"><img
-                    src="../../images/characters/image_centpx/tawn_me_resultatredimensionner.jpg" alt="">
-                <p>Taun Me</p>
-            </a></div>
+					<div class="organa card">
+						<a href="bail_organa.html">
+							<img src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" alt="" />
+							<p>Bail Organa</p>
+						</a>
+					</div>
+				</div>
+			</div>
+		</main>
 
-        <div class="dexter card"><a href="dexter"><img
-                    src="../../images/characters/image_centpx/Dexter_resultatredimensionner.webp" alt="">
-                <p>Dexter Jettster</p>
-            </a></div>
-
-        <div class="typho card " card><a href="typho"><img
-                    src="../../images/characters/image_centpx/gregar_typho_resultatredimensionner.webp" alt="">
-                <p>Gregar Typho</p>
-            </a></div>
-
-    </div>
-
-
-        <h2>Les protagonistes apparus dans La Revanches des Siths </h2>
-
-    <div class="list">
-
-        <div class="c3po card"><a href="c-3po.html"><img
-                    src="../../images/characters/image_centpx/c3po_resultatredimensionner.jpg" alt="">
-                <p>C-3po</p>
-            </a></div>
-
-        <div class="r2d2 card"><a href="r2-d2.html"><img
-                    src="../../images/characters/image_centpx/R2d2_resultatredimensionner.webp" alt="">
-                <p>R2-D2</p>
-            </a></div>
-
-        <div class="yoda card"><a href="yoda.html"><img
-                    src="../../images/characters/image_centpx/yoda_resultatredimensionner.webp" alt="">
-                <p>Yoda</p>
-            </a></div>
-
-        <div class="grievous card"><a href="general_grievous.html"><img
-                    src="../../images/characters/image_centpx/Grievoushead_resultatredimensionner.webp" alt="">
-                <p>Général Grievous</p>
-            </a></div>
-
-        <div class="chewbacca card"><a href="chewbacca.html"><img
-                    src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="">
-                <p>Chewbacca</p>
-            </a></div>
-
-        <div class="tarfull card"><a href="tarrful.html"><img
-                    src="../../images/characters/image_centpx/chewbacka_resultatredimensionner.jpg" alt="">
-                <p>Tarrful</p>
-            </a></div>
-
-        <div class="organa card"><a href="bail_organa.html"><img
-                    src="../../images/characters/image_centpx/organa_resultatredimensionner.jpg" alt="">
-                <p>Bail Organa</p>
-            </a></div>
-    </div>
-    <footer>
-        <iframe src="../../views/footer.html" frameborder="0"></iframe>
-    </footer>
-
-</body>
-
+		<footer>
+			<iframe src="../../views/footer.html" frameborder="0"></iframe>
+		</footer>
+	</body>
 </html>
