--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@ body {
 	color: white;
 }
 
+main{
+    min-height: 100vh;
+}
+
+footer{
+    margin-top: auto;
+}
+
 a {
 	text-decoration: none;
 	color: #b98f3d;
